Added gcp cloudprovider

--- a/addons/thanos/0.3.x/thanos-1.yaml
+++ b/addons/thanos/0.3.x/thanos-1.yaml
@@ -20,6 +20,8 @@ spec:
       enabled: true
     - name: azure
       enabled: true
+    - name: gcp
+      enabled: true
     - name: docker
       enabled: false
     - name: none
