--- a/addons/thanos/0.3.x/thanos-1.yaml
+++ b/addons/thanos/0.3.x/thanos-1.yaml
@@ -15,6 +15,9 @@ metadata:
 spec:
   kubernetes:
     minSupportedVersion: v1.15.6
+  requires:
+    - matchLabels:
+        kubeaddons.mesosphere.io/name: prometheus
   cloudProvider:
     - name: aws
       enabled: true
