efs-provisioner addon change
- added upstream repo https reference
- raised version to 0.11.1

--- a/addons/efs-provisioner/2.4.x/efs-1.yaml
+++ b/addons/efs-provisioner/2.4.x/efs-1.yaml
@@ -19,8 +19,8 @@ spec:
       enabled: true
   chartReference:
     chart: efs-provisioner
-    repo: stable/efs-provisioner
-    version: 0.11.0
+    repo: https://kubernetes-charts.storage.googleapis.com
+    version: 0.11.1
     values: |
       ---
       image:
