resolve link issue

--- a/addons/portworx/1.0.x/portworx-1.yaml
+++ b/addons/portworx/1.0.x/portworx-1.yaml
@@ -30,7 +30,7 @@ spec:
       enabled: true
   chartReference:
     chart: portworx
-    repo: https://portworx.gihub.io/helm/charts
+    repo: https://portworx.github.io/helm/charts
     version: 1.0.0
     values: |
       ---
