--- a/addons/efs-provisioner/2.4.x/efs-1.yaml
+++ b/addons/efs-provisioner/2.4.x/efs-1.yaml
@@ -19,8 +19,8 @@ spec:
       enabled: true
   chartReference:
     chart: efs-provisioner
-    repo: https://kubernetes-charts.storage.googleapis.com
-    version: 0.11.1
+    repo: https://charts.helm.sh/stable
+    version: 0.13.2
     values: |
       ---
       image:
